--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>zetech-keymaster-hub</title>
+    <title>DEV-MAXWELL APIs</title>
     <meta name="description" content="site made by maxwell">
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="zetech-keymaster-hub" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="DEV-MAXWELL APIs" />
+    <meta property="og:description" content="API keys and transactions dashboard" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/o4Bz0t6kZvU1A9CXGtDTmqYQzwt2/social-images/social-1757629263794-zetech.png">
+    <meta property="og:image" content="/public/social-share.png">
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/o4Bz0t6kZvU1A9CXGtDTmqYQzwt2/social-images/social-1757629263794-zetech.png">
-    <link rel="icon" type="image/x-icon" href="https://storage.googleapis.com/gpt-engineer-file-uploads/o4Bz0t6kZvU1A9CXGtDTmqYQzwt2/uploads/1757629249763-zetech.png">
+    <meta name="twitter:image" content="/public/social-share.png">
+    <link rel="icon" type="image/svg+xml" href="/public/favicon.svg">
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
